# rust_tiecode_pc

./: .gitignore  Cargo.toml  CodeEditor 项目优化方案.md  JnaTiecodeLspService.kt  LSP_API_REFERENCE.md  LSP_INTEGRATION.md  TiecodeApi.kt  build.rs  editor_decoupling.md  log.txt  test.kt  test_ascii.t  test_blocks.t  tiec_c.cpp  平台集成编译器.md
.github/scripts/: bundle_macos.sh
.github/workflows/: all-platforms.yml  build-macos.yml  build.yml
native/sweetline/: CMakeLists.txt
native/sweetline/cmake/: MergeStaticLib.cmake
native/sweetline/src/core/: highlight.cpp  internal_highlight.h  internal_syntax.h  syntax.cpp  util.cpp
native/sweetline/src/include/: c_sweetline.h
native/sweetline/tests/: CMakeLists.txt
plugin/api/: Cargo.toml
plugin/api/src/: lib.rs
plugin/core/lsp/: Cargo.toml
src/: codeedit.rs  ffi_guard.c  lib.rs  main.rs  panic_handler.rs  sweetline.rs
src/component/: command_palette.rs  file_tree.rs  git_panel.rs  image_viewer.rs  markdown_viewer.rs  measure_bounds.rs  mod.rs  modal.rs  popover.rs  status_bar.rs  tie_svg.rs  tool_panel.rs
src/config/: APP_ID.rs
src/editor/: block_map.rs  completion.rs  core.rs  diff_tests.rs  grammar.rs  layout.rs  lsp_integration.rs  mod.rs  tests.rs  undo.rs
src/lsp/: client.rs  jflsp.rs  mod.rs
src/lsp/tiec/: IDE服务.md  common.rs  completion.rs  diagnostics.rs  formatting.rs  generated_tiec_bindings.dart  hover.rs  mod.rs  options.rs  rename.rs  signature.rs  smart_enter.rs  symbols.rs  test.rs  types.rs  ui_binding.rs  wrapper.rs
src/plugin/: lsp.rs  manager.rs  manifest.rs  mod.rs
(+2 files in other folders)
