[package]
name = "tiecode"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
# gpui构建图形化程序
gpui={version="0.2.2"}
# 日志库，用于调试
log = "0.4"
# 简单的日志实现器，将日志输出到控制台
env_logger = "0.10"

libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
smallvec = "1"
zed-font-kit = "0.14.1-zed"
core-graphics = "=0.24.0"
core-text = "=20.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
cc = "1"


[patch.crates-io]
core-graphics = { version = "=0.24.0" }
core-text = { version = "=20.0.0" }
