[package]
name = "tiecode"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# gpui构建图形化程序
gpui={version="0.2.2"}
# 日志库，用于调试
log = "0.4"
# 简单的日志实现器，将日志输出到控制台
env_logger = "0.10"

libloading = "0.8"
tiecode-plugin-api = { path = "plugin/api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
smallvec = "1"
ropey = "1.6.1"
lru = "0.16.3"
url = "2.5"
notify = "6"
similar = "2"

# 用于编译sweetline
libc = "0.2"
anyhow = "1.0.100"
rfd = "0.17.2"
image = "0.25.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
cc = "1"


[build-dependencies]
cmake = "0.1"
bindgen = "0.69"

[workspace]
members = [
    "plugin/api",
    "plugin/core/lsp",
]
